<resources>
    <string name="app_name">Amigo</string>
    <string name="login_hint_name">Name</string>
    <string name="login_hint_age">age</string>
    <string name="login_message">please give some information</string>
    <string name="login_btn_confirm">confirm</string>
    <string name="sign_in_success">Success!</string>
    <string name="done_message">We targetEmail to you when party succesfully joined.</string>
    <string name="new_party_submit">submit</string>
    <string name="new_party_gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="theme">Theme</string>
    <string name="attraction">Attraction</string>
    <string name="nation">Nation</string>
    <string name="sign_in_email_hint">please input your targetEmail</string>
    <string name="sign_in_later">do later</string>
    <string name="sign_in">sign in</string>
    <string name="message_intro1" translatable="false">Amigo! \n\n
        I\'ll be your travel mate :) \n\n
        Even if it\'s your first
        trip alone, you will not be afraid to be with friends. \n\n
        Amigo helps you meet new local friends while traveling!
    </string>
    <string name="message_intro2" translatable="false">How to use the service!\n\n
        If you are planning a trip to Korea, \nand need a friend to accompany you,\n
        Please touch apply. \nAmigo will match you travel mate!
    </string>
    <string name="hint_search_language">search language</string>
    <string name="add">add</string>
    <string name="label_selected_language">Selected language:</string>
    <string name="apply">apply</string>
    <string name="targetEmail">targetEmail</string>
    <string name="label_desired_date">Desired date</string>
    <string name="label_choose_date">choose date</string>
    <string name="age_title">Age:</string>
    <string name="language">Language</string>
    <string name="choose_age">choose age</string>
    <string name="add_language">add language</string>
    <string name="availiable_language_head">availiable language:</string>
    <string name="more_info">do later</string>
    <string name="place_for_title" translatable="false">Place for title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- KEYS -->
    <string name="KEY_ISSIGNIN" translatable="false">inSignIn</string>
    <string name="KEY_PREFERENCE" translatable="false">com.amigotrip.android.preferences</string>
    <string name="KEY_USER_ID" translatable="false">key_user_id</string>
    <string name="KEY_USER_EMAIL" translatable="false">key_email</string>
    <string name="KEY_USER_NAME" translatable="false">userName</string>
    <string name="KEY_GOOGLE_SERVER_CLIENT" translatable="false">AIzaSyB2wJ1UqqjiV11S9Rd3wtSmyZ2EoylEwKk</string>
    <string name="sign_up">sign up</string>
</resources>
